--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -40,11 +40,11 @@
       </ng-container>
       <ng-container matColumnDef="userId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
-        <td mat-cell *matCellDef="let user"> {{user.userId |  slice:0:8 }}... </td>
+        <td mat-cell *matCellDef="let user"> {{(user.userId | slice:0:8) + '...'}}</td>
       </ng-container>
       <ng-container matColumnDef="externalUserId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> External User ID </th>
-        <td mat-cell *matCellDef="let user"> {{user.externalUserId}} </td>
+        <td mat-cell *matCellDef="let user"> {{user.externalId}} </td>
       </ng-container>
       <ng-container matColumnDef="startDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
