--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -42,6 +42,10 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
         <td mat-cell *matCellDef="let user"> {{(user.userId | slice:0:8) + '...'}}</td>
       </ng-container>
+      <ng-container matColumnDef="sourceType">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Source Type </th>
+        <td mat-cell *matCellDef="let user"> {{user.sourceType}} </td>
+      </ng-container>
       <ng-container matColumnDef="externalUserId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> External User ID </th>
         <td mat-cell *matCellDef="let user"> {{user.externalId}} </td>
