--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -84,7 +84,7 @@
     <mat-paginator
       [length]="totalItems"
       [pageSize]="20"
-      [pageSizeOptions]="[1, 5, 10, 20, 50]"
+      [pageSizeOptions]="[10, 20, 50]"
       (page)="loadPage($event)"
       showFirstLastButtons
     ></mat-paginator>
