--- a/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
@@ -7,7 +7,7 @@
   </ngb-alert>
 </div>
 
-<div *ngIf="restSourceUser" class="container col-md-4">
+<div *ngIf="restSourceUser" class="container col-md-4" style="padding: 32px">
   <h3 *ngIf="!isEditing">Enter details for User</h3>
   <h3 *ngIf="isEditing">Details for User</h3>
   <div class="form-group">
@@ -75,6 +75,12 @@
     <label for="isAuthorized">Authorized:</label>
     <input class="form-control" name="isAuthorized" disabled type="text"
            id="isAuthorized" [value]= "restSourceUser.isAuthorized? 'Yes':'No'">
+  </div>
+
+  <div class="form-group" *ngIf="isEditing">
+    <label for="timesReset">Reset Version:</label>
+    <input class="form-control" name="resetVersion" disabled type="text"
+           id="resetVersion" [(ngModel)]="restSourceUser.version">
   </div>
 
   <div class="form-group" *ngIf="isEditing">
