Add a tooltip to show the complete user id on the user list page and show complete user id in the user info page

--- a/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
@@ -35,7 +35,7 @@
     <label for="userId">User ID:</label>
     <select class="form-control" id="userId" [(ngModel)]="restSourceUser.userId" #userId="ngModel" [disabled]="isEditing">
       <option [selected]="true" [ngValue]="null">Select a user</option>
-      <option *ngFor="let user of subjects" [value]="user.id">{{user.externalId}} ({{(user.id | slice:0:8) + '...'}})</option>
+      <option *ngFor="let user of subjects" [value]="user.id">{{user.externalId}} ({{ user.id }})</option>
     </select>
   </div>
 
