--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -40,15 +40,22 @@
       </ng-container>
       <ng-container matColumnDef="userId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
-        <td mat-cell *matCellDef="let user"> {{(user.userId | slice:0:8) + '...'}}</td>
-      </ng-container>
-      <ng-container matColumnDef="sourceType">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Source Type </th>
-        <td mat-cell *matCellDef="let user"> {{user.sourceType}} </td>
+        <td mat-cell *matCellDef="let user">
+          <span   
+          [matTooltip]="user.userId"
+          matTooltipPosition="after"
+          matTooltipHideDelay="10000">
+          {{(user.userId | slice:0:13) + '...'}}
+        </span>
+      </td>
       </ng-container>
       <ng-container matColumnDef="externalUserId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> External User ID </th>
         <td mat-cell *matCellDef="let user"> {{user.externalId}} </td>
+      </ng-container>
+      <ng-container matColumnDef="sourceType">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Source Type </th>
+        <td mat-cell *matCellDef="let user"> {{user.sourceType}} </td>
       </ng-container>
       <ng-container matColumnDef="startDate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
