--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-registration-form.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-registration-form.component.html
@@ -13,7 +13,7 @@
   </div>
   <br />
 
-  <button class="btn btn-success" type="submit" (click)="requestToAuthorize()">
+  <button [disabled]="!selectedSourceType" class="btn btn-success" type="submit" (click)="requestToAuthorize()">
     Request to authorize
   </button>
 </div>
