Rest source client listing fix

--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-registration-form.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-registration-form.component.html
@@ -6,8 +6,8 @@
       class="form-control"
       id="field_sourceType"
     >
-      <option [ngValue]="sourceType" *ngFor="let sourceType of sourceTypes">{{
-        sourceType
+      <option [ngValue]="sourceType.sourceType" *ngFor="let sourceType of sourceTypes">{{
+        sourceType.sourceType
       }}</option>
     </select>
   </div>
