--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-dashboard.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-dashboard.component.html
@@ -7,7 +7,8 @@
   </ngb-alert>
 
   <div class="container col-md-4">
-    <rest-source-user-registration-form></rest-source-user-registration-form>
+<!--    <rest-source-user-registration-form></rest-source-user-registration-form>-->
+    <a mat-raised-button color="primary" [routerLink]="'users:link'">Link Subject to Source</a>
 
     <form class="form-group">
       <div class="container text-center">
