--- a/authorizer-app/src/app/components/rest-source-authorization/authorized-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/authorized-rest-source-user.component.html
@@ -1,3 +1,20 @@
 <toolbar [showMenu]="true"></toolbar>
-<p>Authorized</p>
-<h2 *ngIf="showThankYou">Thank You!</h2>
+<div *ngIf="!showThankYou" class="spinner"></div>
+<mat-card *ngIf="showThankYou" class="link-rest-source-user-card" style="width: 400px;">
+  <mat-card-header>
+    <mat-card-title>Thank you!</mat-card-title>
+    <mat-card-subtitle>Your fitbit account links to radar-base</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+      molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+      numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+      optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+      obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+      nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
+      tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
+      quia.</p>
+  </mat-card-content>
+</mat-card>
+
