Add registration button to data table

--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-dashboard.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-dashboard.component.html
@@ -8,7 +8,7 @@
 
   <div class="container col-md-4">
 <!--    <rest-source-user-registration-form></rest-source-user-registration-form>-->
-    <a mat-raised-button color="primary" [routerLink]="'users:link'">Link Subject to Source</a>
+    <button mat-raised-button color="primary" [routerLink]="'/users:link'">Link Subject to Source</button>
 
     <form class="form-group">
       <div class="container text-center">
