--- a/authorizer-app/src/app/components/rest-source-authorization/link-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/link-rest-source-user.component.html
@@ -101,10 +101,10 @@
       <mat-form-field class="full-width" appearance="outline">
         <!--          <mat-label></mat-label>-->
         <input matInput [type]="'text'" [value]="linkForUser">
-        <button mat-icon-button matSuffix (click)="copyToClipboard()" [attr.aria-label]="'Hide password'" >
-          <!--          [attr.aria-pressed]="hide"-->
-          <mat-icon>content_copy</mat-icon>
-        </button>
+<!--        <button mat-icon-button matSuffix (click)="copyToClipboard()" [attr.aria-label]="'Hide password'" >-->
+<!--          &lt;!&ndash;          [attr.aria-pressed]="hide"&ndash;&gt;-->
+<!--          <mat-icon>content_copy</mat-icon>-->
+<!--        </button>-->
       </mat-form-field>
     </div>
   </div>
