--- a/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/update-rest-source-user.component.html
@@ -1,5 +1,6 @@
 <toolbar [showMenu]="true"></toolbar>
-
+<!--{{isEditing}}-->
+<!--{{restSourceUser | json}}-->
 <div class="container col-md-4">
   <ngb-alert *ngIf="errorMessage" type="danger"
              (close)="errorMessage = null">
@@ -8,8 +9,8 @@
 </div>
 
 <div *ngIf="restSourceUser" class="container col-md-4" style="padding: 32px">
-  <h3 *ngIf="!isEditing">Enter details for User</h3>
-  <h3 *ngIf="isEditing">Details for User</h3>
+  <h3 *ngIf="isEditing">Authorize User</h3>
+  <h3 *ngIf="!isEditing">Details for User</h3>
   <div class="form-group">
     <label for="externalUserId">Service User ID:</label>
     <input class="form-control" name="externalUserId" disabled type="text"
@@ -22,18 +23,20 @@
            [(ngModel)]="restSourceUser.sourceType" id="sourceType">
   </div>
 
+<!--  {{restSourceProjects | json}}-->
   <div class="form-group">
     <label for="projectId">Project ID:</label>
-    <select class="form-control" id="projectId" [(ngModel)]="restSourceUser.projectId" #projectId="ngModel" [disabled]="isEditing"
+    <select class="form-control" id="projectId" [(ngModel)]="restSourceUser.projectId" #projectId="ngModel" disabled
             (change)="onChangeProject($event.target.value)">
       <option [selected]="true" [ngValue]="null">Select a project</option>
       <option [value]="project.id" *ngFor="let project of restSourceProjects">{{project.id}}</option>
     </select>
   </div>
 
+<!--  {{subjects | json}}-->
   <div class="form-group" *ngIf="restSourceUser.projectId">
     <label for="userId">User ID:</label>
-    <select class="form-control" id="userId" [(ngModel)]="restSourceUser.userId" #userId="ngModel" [disabled]="isEditing">
+    <select class="form-control" id="userId" [(ngModel)]="restSourceUser.userId" #userId="ngModel" disabled>
       <option [selected]="true" [ngValue]="null">Select a user</option>
       <option *ngFor="let user of subjects" [value]="user.id">{{user.externalId}} ({{ user.id }})</option>
     </select>
@@ -50,7 +53,7 @@
     <div class="input-group" placement="top"
          ngbTooltip="Start date to collect data from this source">
       <input id="startDate" class="form-control" placeholder="yyyy-mm-dd"
-        required name="startDate" [(ngModel)]="startDate" ngbDatepicker #e="ngbDatepicker" [disabled]="isEditing">
+        required name="startDate" [(ngModel)]="startDate" ngbDatepicker #e="ngbDatepicker" disabled>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary calendar" (click)="e.toggle()"
                 type="button"></button>
@@ -63,7 +66,7 @@
     <div class="input-group" placement="top"
          ngbTooltip="End date to collect data from this source">
       <input id="endDate" class="form-control" placeholder="yyyy-mm-dd"
-        required name="endDate" [(ngModel)]="endDate" ngbDatepicker #d="ngbDatepicker" [disabled]="isEditing">
+        required name="endDate" [(ngModel)]="endDate" ngbDatepicker #d="ngbDatepicker" disabled>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
                 type="button"></button>
@@ -71,32 +74,67 @@
     </div>
   </div>
 
-  <div class="form-group" *ngIf="isEditing">
+  <div class="form-group" *ngIf="!isEditing">
     <label for="isAuthorized">Authorized:</label>
     <input class="form-control" name="isAuthorized" disabled type="text"
            id="isAuthorized" [value]= "restSourceUser.isAuthorized? 'Yes':'No'">
   </div>
 
-  <div class="form-group" *ngIf="isEditing">
+  <div class="form-group" *ngIf="!isEditing">
     <label for="timesReset">Reset Version:</label>
     <input class="form-control" name="resetVersion" disabled type="text"
            id="resetVersion" [(ngModel)]="restSourceUser.version">
   </div>
 
-  <div class="form-group" *ngIf="isEditing">
+  <div class="form-group" *ngIf="!isEditing">
     <label for="timesReset">Times Reset:</label>
     <input class="form-control" name="timesReset" disabled type="text"
            id="timesReset" [(ngModel)]="restSourceUser.timesReset">
   </div>
 
-  <button *ngIf="!isEditing" type="button" (click)="cancelUpdateUser()" class="btn btn-outline-primary"
-          style="margin-right: 16px">Cancel
-  </button>
-  <button *ngIf="isEditing" type="button" (click)="backClicked()" class="btn btn-outline-primary"
+<!--  <button *ngIf="isEditing" type="button" (click)="cancelUpdateUser()" class="btn btn-outline-primary"-->
+<!--          style="margin-right: 16px">Cancel-->
+<!--  </button>-->
+  <button type="button" (click)="backClicked()" class="btn btn-outline-primary"
           style="margin-right: 16px">Back
   </button>
 
-  <button *ngIf="!isEditing && restSourceUser.projectId" type="button" (click)="updateRestSourceUser()"
-                   class="btn btn-success">Submit
+<!--  <button *ngIf="isEditing && restSourceUser.projectId" type="button" (click)="updateRestSourceUser()"-->
+<!--                   class="btn btn-success">Submit-->
+<!--  </button>-->
+
+  <button *ngIf="isEditing && restSourceUser.projectId" type="button" name="authorize" (click)="onSubmit('authorize')"
+          class="btn btn-success">Authorize
   </button>
+
+  <button *ngIf="isEditing && restSourceUser.projectId" type="button" name="link" (click)="onSubmit('link')"
+          class="btn btn-success">Copy Link
+  </button>
+
+  <div class="form-group" *ngIf="isEditing && linkForUser">
+    <label for="timesReset">Send this link to Subject</label>
+    <input class="form-control" name="linkForUser" [value]="linkForUser" type="text"
+           id="linkForUser">
+  </div>
+
+
+<!--  <div class="row" *ngIf="linkForUser">-->
+<!--    <div class="col">-->
+<!--      Send this link to Subject-->
+<!--      <mat-form-field class="full-width" appearance="outline">-->
+<!--        &lt;!&ndash;          <mat-label></mat-label>&ndash;&gt;-->
+<!--        <input class="form-control" name="isAuthorized" disabled type="text"-->
+<!--               id="isAuthorized" [type]="'text'" [value]="linkForUser">-->
+<!--&lt;!&ndash;        <button mat-icon-button matSuffix (click)="copyToClipboard()" [attr.aria-label]="'Hide password'" >&ndash;&gt;-->
+<!--&lt;!&ndash;          &lt;!&ndash;          [attr.aria-pressed]="hide"&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;          <mat-icon>content_copy</mat-icon>&ndash;&gt;-->
+<!--&lt;!&ndash;        </button>&ndash;&gt;-->
+<!--      </mat-form-field>-->
+<!--    </div>-->
+<!--  </div>-->
+
+<!--  <button mat-raised-button color="primary" type="button" (click)="onBack()">Back</button>-->
+<!--  <button mat-raised-button color="primary" type="submit" name="authorize" [class.spinner]="authorizationLoading" [disabled]="authorizationLoading || linkGeneratingLoading || !form.valid">Authorize</button>-->
+<!--  <button mat-raised-button color="primary" type="submit" name="link" [class.spinner]="linkGeneratingLoading" [disabled]="authorizationLoading || linkGeneratingLoading || !form.valid">Copy Link</button>-->
+
 </div>
