Modify routes in app.module

--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-registration-form.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-registration-form.component.html
@@ -6,9 +6,9 @@
       class="form-control"
       id="field_sourceType"
     >
-      <option [ngValue]="sourceType.sourceType" *ngFor="let sourceType of sourceTypes">{{
-        sourceType.sourceType
-      }}</option>
+      <option [ngValue]="sourceType" *ngFor="let sourceType of sourceTypes">{{
+        sourceType
+        }}</option>
     </select>
   </div>
   <br />
