--- a/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/rest-source-user-list.component.html
@@ -1,21 +1,14 @@
 <div class="users-container">
 
-  <div class="container col-md-4">
-    <mat-form-field class="row col">
-      <label>
-        <input
-                matInput
-                (keyup)="applyFilter($event.target.value)"
-                placeholder="Filter by User ID or External User ID"
-        />
-      </label>
-    </mat-form-field>
-    <div class="row justify-content-end">
-      <label>
-        <mat-checkbox (change)="applyIsAuthorized($event.checked)">Only unauthorized</mat-checkbox>
-      </label>
-    </div>
-  </div>
+  <mat-form-field class="container col-md-4">
+    <label>
+      <input
+        matInput
+        (keyup)="applyFilter($event.target.value)"
+        placeholder="Filter by User ID or External User ID"
+      />
+    </label>
+  </mat-form-field>
 
   <table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="id">
@@ -26,12 +19,12 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
       <td mat-cell *matCellDef="let user">
         <span
-        [matTooltip]="user.userId"
-        matTooltipPosition="after"
-        matTooltipHideDelay="10000">
+          [matTooltip]="user.userId"
+          matTooltipPosition="after"
+          matTooltipHideDelay="10000">
         {{(user.userId | slice:0:13) + '...'}}
       </span>
-    </td>
+      </td>
     </ng-container>
     <ng-container matColumnDef="externalUserId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> External User ID </th>
@@ -60,7 +53,7 @@
           <mat-icon>info</mat-icon>
         </button>
         <button *ngIf="!user.isAuthorized" mat-icon-button matTooltip="Register/Link" color="primary" [routerLink]="['/users', user.id]" [queryParams]="{ link: true }">
-<!--          (click)="registerUser()"-->
+          <!--          (click)="registerUser()"-->
           <mat-icon>person_add</mat-icon>
         </button>
         <button mat-icon-button ngbTooltip="Reset" matTooltip="This will re-pull all the data for this user"
@@ -86,6 +79,6 @@
 
   <mat-paginator [hidden]="!dataSource.data.length"
                  [pageSizeOptions]="[10, 20, 50]"
-    showFirstLastButtons
+                 showFirstLastButtons
   ></mat-paginator>
 </div>
