Add copy to clipboard and fix error message

--- a/authorizer-app/src/app/components/rest-source-authorization/authorize-rest-source-user.component.html
+++ b/authorizer-app/src/app/components/rest-source-authorization/authorize-rest-source-user.component.html
@@ -1,2 +1,8 @@
 <toolbar [showMenu]="true"></toolbar>
 <h2 *ngIf="showThankYou">Thank You!</h2>
+<div class="container col-md-4">
+  <ngb-alert *ngIf="errorMessage" type="danger"
+             (close)="errorMessage = null">
+    {{ errorMessage}}
+  </ngb-alert>
+</div>
