--- a/authorizer-app/src/app/components/rest-source-authorization/authorize-rest-source-user.component.scss
+++ b/authorizer-app/src/app/components/rest-source-authorization/authorize-rest-source-user.component.scss
@@ -1,18 +1,54 @@
-@keyframes spinner {
-  to {transform: rotate(360deg);}
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100% - 64px);
 }
-.spinner:before {
-  content: '';
+
+mat-card {
   box-sizing: border-box;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 20px;
-  height: 20px;
-  margin-top: -10px;
-  margin-left: -10px;
-  border-radius: 50%;
-  border: 2px solid #ffffff;
-  border-top-color: #000000;
-  animation: spinner .8s linear infinite;
+  width: 400px;
 }
+
+mat-card-header{
+  justify-content: center;
+  text-align: center;
+}
+
+mat-card-content{
+  text-align: center;
+}
+
+.loader-container {
+  width: 100%;
+  display: flex;
+  background: rgba(255,255,255,0.5);
+  z-index: 1;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 1200px){
+  /*Tablets [601px -> 1200px]*/
+  mat-card {
+    width: calc(100% - 32px);
+  }
+}
+
+//@keyframes spinner {
+//  to {transform: rotate(360deg);}
+//}
+//.spinner:before {
+//  content: '';
+//  box-sizing: border-box;
+//  position: absolute;
+//  top: 50%;
+//  left: 50%;
+//  width: 20px;
+//  height: 20px;
+//  margin-top: -10px;
+//  margin-left: -10px;
+//  border-radius: 50%;
+//  border: 2px solid #ffffff;
+//  border-top-color: #000000;
+//  animation: spinner .8s linear infinite;
+//}
